# kragen

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: documentation-language.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_telegram_bindings.py  003_telegram_processed_messages.py  004_storage_entries.py
configs/: kragen.yaml
configs/mcp/: cursor-mcp.example.json
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  DEPENDENCIES.md  DEPLOYMENT.md  INSTALL.md  OPERATIONS.md  PLUGINS.md  PROJECT_REFACTORING.md  STORAGE.md
mcp_servers/db_mcp/: main.py
mcp_servers/memory_mcp/: main.py
mcp_servers/secrets_mcp/: main.py
mcp_servers/workspace_mcp/: main.py
scripts/: seed_data.py  start.py  status.py  stop.py
scripts/systemd/: README.md  install-local-service.sh  kragen-service.env  kragen-service.service
src/kragen/: __init__.py  config.py  logging_config.py  worker.py
src/kragen/api/: deps.py  main.py  schemas.py
src/kragen/api/routes/: admin.py  files.py  health.py  messages.py  plugins.py  sessions.py  tasks.py  workspaces.py
src/kragen/channels/: __init__.py  telegram_adapter.py  telegram_api.py  telegram_settings.py  telegram_utils.py
src/kragen/cli/: agentctl.py  service_runner.py  web_server_ctl.py
src/kragen/db/: session.py
src/kragen/mcp/: __init__.py  kragen_files_mcp.py
src/kragen/models/: __init__.py  base.py  core.py  memory.py  retrieval.py  storage.py
src/kragen/plugins/: __init__.py  base.py  context.py  errors.py  loader.py  manager.py
src/kragen/plugins/builtin/: __init__.py  (+3 more)
src/kragen/services/: __init__.py  audit_service.py  file_storage.py  log_buffer.py  orchestrator.py  task_queue.py  task_reaper.py  task_stream.py  task_stream_backends.py  task_token.py  telegram_bindings.py  url_import.py
src/kragen/storage/: object_store.py
tests/: test_file_import_body.py  test_files_rbac.py  test_health.py  test_plugins.py  test_rbac.py  test_service_runner.py  test_sessions_workspace_access.py  test_task_reaper.py  test_task_stream_backend.py  test_task_token.py  test_tasks_workspace_access.py  test_telegram_adapter.py  test_telegram_bindings.py  test_telegram_reaper.py  test_url_import.py
web/: index.html
